src/apps/snapshots/handlr__apps__user__tests__add_handlers_expand_wildcards.snap
---
source: src/apps/user.rs
expression: "String::from_utf8(buffer)?"
---
[Default Applications]
application/vnd.oasis.opendocument.chart=startcenter.desktop;
application/vnd.oasis.opendocument.chart-template=startcenter.desktop;
application/vnd.oasis.opendocument.database=startcenter.desktop;
application/vnd.oasis.opendocument.formula=startcenter.desktop;
application/vnd.oasis.opendocument.formula-template=startcenter.desktop;
application/vnd.oasis.opendocument.graphics=startcenter.desktop;
application/vnd.oasis.opendocument.graphics-template=startcenter.desktop;
application/vnd.oasis.opendocument.image=startcenter.desktop;
application/vnd.oasis.opendocument.image-template=startcenter.desktop;
application/vnd.oasis.opendocument.presentation=startcenter.desktop;
application/vnd.oasis.opendocument.presentation-template=startcenter.desktop;
application/vnd.oasis.opendocument.spreadsheet=startcenter.desktop;
application/vnd.oasis.opendocument.spreadsheet-template=startcenter.desktop;
application/vnd.oasis.opendocument.text=startcenter.desktop;
application/vnd.oasis.opendocument.text-master=startcenter.desktop;
application/vnd.oasis.opendocument.text-template=startcenter.desktop;
application/vnd.oasis.opendocument.text-web=startcenter.desktop;
text/cache-manifest=Helix.desktop;nvim.desktop;
text/calendar=Helix.desktop;nvim.desktop;
text/coffeescript=Helix.desktop;nvim.desktop;
text/css=Helix.desktop;nvim.desktop;
text/csv=Helix.desktop;nvim.desktop;
text/html=Helix.desktop;nvim.desktop;
text/jade=Helix.desktop;nvim.desktop;
text/javascript=Helix.desktop;nvim.desktop;
text/jsx=Helix.desktop;nvim.desktop;
text/less=Helix.desktop;nvim.desktop;
text/markdown=Helix.desktop;nvim.desktop;
text/mathml=Helix.desktop;nvim.desktop;
text/mdx=Helix.desktop;nvim.desktop;
text/n3=Helix.desktop;nvim.desktop;
text/plain=Helix.desktop;nvim.desktop;
text/prs.lines.tag=Helix.desktop;nvim.desktop;
text/richtext=Helix.desktop;nvim.desktop;
text/rtf=Helix.desktop;nvim.desktop;
text/sgml=Helix.desktop;nvim.desktop;
text/shex=Helix.desktop;nvim.desktop;
text/slim=Helix.desktop;nvim.desktop;
text/spdx=Helix.desktop;nvim.desktop;
text/stylus=Helix.desktop;nvim.desktop;
text/tab-separated-values=Helix.desktop;nvim.desktop;
text/troff=Helix.desktop;nvim.desktop;
text/turtle=Helix.desktop;nvim.desktop;
text/uri-list=Helix.desktop;nvim.desktop;
text/vcard=Helix.desktop;nvim.desktop;
text/vnd.curl=Helix.desktop;nvim.desktop;
text/vnd.curl.dcurl=Helix.desktop;nvim.desktop;
text/vnd.curl.mcurl=Helix.desktop;nvim.desktop;
text/vnd.curl.scurl=Helix.desktop;nvim.desktop;
text/vnd.dvb.subtitle=Helix.desktop;nvim.desktop;
text/vnd.familysearch.gedcom=Helix.desktop;nvim.desktop;
text/vnd.fly=Helix.desktop;nvim.desktop;
text/vnd.fmi.flexstor=Helix.desktop;nvim.desktop;
text/vnd.graphviz=Helix.desktop;nvim.desktop;
text/vnd.in3d.3dml=Helix.desktop;nvim.desktop;
text/vnd.in3d.spot=Helix.desktop;nvim.desktop;
text/vnd.sun.j2me.app-descriptor=Helix.desktop;nvim.desktop;
text/vnd.wap.wml=Helix.desktop;nvim.desktop;
text/vnd.wap.wmlscript=Helix.desktop;nvim.desktop;
text/vtt=Helix.desktop;nvim.desktop;
text/wgsl=Helix.desktop;nvim.desktop;
text/x-asm=Helix.desktop;nvim.desktop;
text/x-c=Helix.desktop;nvim.desktop;
text/x-component=Helix.desktop;nvim.desktop;
text/x-fortran=Helix.desktop;nvim.desktop;
text/x-handlebars-template=Helix.desktop;nvim.desktop;
text/x-java-source=Helix.desktop;nvim.desktop;
text/x-lua=Helix.desktop;nvim.desktop;
text/x-markdown=Helix.desktop;nvim.desktop;
text/x-nfo=Helix.desktop;nvim.desktop;
text/x-opml=Helix.desktop;nvim.desktop;
text/x-org=Helix.desktop;nvim.desktop;
text/x-pascal=Helix.desktop;nvim.desktop;
text/x-processing=Helix.desktop;nvim.desktop;
text/x-sass=Helix.desktop;nvim.desktop;
text/x-scss=Helix.desktop;nvim.desktop;
text/x-setext=Helix.desktop;nvim.desktop;
text/x-sfv=Helix.desktop;nvim.desktop;
text/x-suse-ymp=Helix.desktop;nvim.desktop;
text/x-uuencode=Helix.desktop;nvim.desktop;
text/x-vcalendar=Helix.desktop;nvim.desktop;
text/x-vcard=Helix.desktop;nvim.desktop;
text/xml=Helix.desktop;nvim.desktop;
text/yaml=Helix.desktop;nvim.desktop;
video/mp4=mpv.desktop;
