src/apps/snapshots/handlr__apps__user__tests__unset_handlers_expand_wildcards.snap
---
source: src/apps/user.rs
expression: "String::from_utf8(buffer)?"
---
[Default Applications]
text/cache-manifest=Helix.desktop;
text/calendar=Helix.desktop;
text/coffeescript=Helix.desktop;
text/css=Helix.desktop;
text/csv=Helix.desktop;
text/html=Helix.desktop;
text/jade=Helix.desktop;
text/javascript=Helix.desktop;
text/jsx=Helix.desktop;
text/less=Helix.desktop;
text/markdown=Helix.desktop;
text/mathml=Helix.desktop;
text/mdx=Helix.desktop;
text/n3=Helix.desktop;
text/plain=Helix.desktop;
text/prs.lines.tag=Helix.desktop;
text/richtext=Helix.desktop;
text/rtf=Helix.desktop;
text/sgml=Helix.desktop;
text/shex=Helix.desktop;
text/slim=Helix.desktop;
text/spdx=Helix.desktop;
text/stylus=Helix.desktop;
text/tab-separated-values=Helix.desktop;
text/troff=Helix.desktop;
text/turtle=Helix.desktop;
text/uri-list=Helix.desktop;
text/vcard=Helix.desktop;
text/vnd.curl=Helix.desktop;
text/vnd.curl.dcurl=Helix.desktop;
text/vnd.curl.mcurl=Helix.desktop;
text/vnd.curl.scurl=Helix.desktop;
text/vnd.dvb.subtitle=Helix.desktop;
text/vnd.familysearch.gedcom=Helix.desktop;
text/vnd.fly=Helix.desktop;
text/vnd.fmi.flexstor=Helix.desktop;
text/vnd.graphviz=Helix.desktop;
text/vnd.in3d.3dml=Helix.desktop;
text/vnd.in3d.spot=Helix.desktop;
text/vnd.sun.j2me.app-descriptor=Helix.desktop;
text/vnd.wap.wml=Helix.desktop;
text/vnd.wap.wmlscript=Helix.desktop;
text/vtt=Helix.desktop;
text/wgsl=Helix.desktop;
text/x-asm=Helix.desktop;
text/x-c=Helix.desktop;
text/x-component=Helix.desktop;
text/x-fortran=Helix.desktop;
text/x-handlebars-template=Helix.desktop;
text/x-java-source=Helix.desktop;
text/x-lua=Helix.desktop;
text/x-markdown=Helix.desktop;
text/x-nfo=Helix.desktop;
text/x-opml=Helix.desktop;
text/x-org=Helix.desktop;
text/x-pascal=Helix.desktop;
text/x-processing=Helix.desktop;
text/x-sass=Helix.desktop;
text/x-scss=Helix.desktop;
text/x-setext=Helix.desktop;
text/x-sfv=Helix.desktop;
text/x-suse-ymp=Helix.desktop;
text/x-uuencode=Helix.desktop;
text/x-vcalendar=Helix.desktop;
text/x-vcard=Helix.desktop;
text/xml=Helix.desktop;
text/yaml=Helix.desktop;
